<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Timetables</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ipsum ipsum, feugiat sed quam et, scelerisque hendrerit ipsum. Aenean mattis nulla leo, sed vulputate risus scelerisque non. In dolor ligula, tempus vitae metus a, dignissim sollicitudin tortor. Sed at diam sed nibh pretium sodales. Donec quis nunc at arcu vestibulum tristique in sit amet ipsum. Phasellus eleifend metus tortor, eget consequat ipsum iaculis vitae. Donec consequat metus elit, eget suscipit velit aliquam sit amet. Duis vel faucibus tortor, sed finibus eros. Nullam eget scelerisque enim, et posuere nisl. In in ante eu ligula pharetra fringilla eu sed libero. Aenean mollis, nisi vitae molestie gravida, augue magna porttitor metus, sed rhoncus dolor justo vel arcu. Suspendisse iaculis tortor eu sollicitudin pretium. Cras bibendum risus sit amet dui rutrum, lobortis vehicula elit volutpat. Vivamus condimentum ut mauris non posuere. Integer viverra quis massa id accumsan.</string>

	<!-- General -->
	<string name="save">Save</string>
	<string name="error_generic">An unexpected error occurred.</string>
	<string name="today">Today</string>

	<!-- SetupActivity -->
	<string name="setup_next">Next</string>
	<string name="welcome_title">Welcome, College of Science student!</string>
	<string name="welcome_subtitle">First, we need to do some setup in order to start syncing with your timetable. Please follow the instructions below.</string>
	<string name="welcome_hint_url">Enter your calendar URL.</string>
	<string name="welcome_url_instructions_button">How do I get one?</string>
	<string name="welcome_url_instructions">1. Open your web browser and go to your timetable page on the Collge of Science intranet.\n\n2. Read the instructions below the timetable and copy the URL address of the link (long press). \n\n3. Go back to this app. Paste the content of your clipboard into the text input above.</string>
	<string name="last_title">You\'re all set!</string>
	<string name="last_subtitle">Take a look at Profile settings to adjust your preferences.</string>

	<!-- HomeFragment -->
	<string name="home_title">Timetable</string>
	<string name="home_today">Today</string>
	<string name="home_select_date">Select date</string>
	<string name="home_error_cannot_display">Cannot display the date you selected.</string>

	<!-- TimetableFragment -->
	<string name="timetable_empty">No events on this day.</string>

	<!-- SettingsFragment -->
	<string name="settings_title">Profile</string>
	<string name="settings_title_long">Profile settings</string>
	<string name="settings_url_title">Calendar URL</string>
	<string name="settings_url_hint">URL for calendar import page</string>
	<string name="settings_url_invalid">Sorry, this doesn\'t seem to be a valid calendar URL.</string>
	<string name="settings_filters_title">Filters</string>
	<string name="settings_filters_explication">Here you can specify which events you don\'t want to see on your timetable. Simply type in the text that you want to ignore, such as \"Group Y\" - provided you\'re a member of Group X.</string>
	<string name="settings_filters_hint">Type the module you never want to attend</string>
	<string name="settings_filters_none">No filters set.</string>
	<string name="settings_notifications_title">Notifications</string>
	<string name="settings_notifications_daily_time">Daily notifications time</string>
	<string name="settings_notifications_daily_in_advance">Daily notifications on the day before</string>
	<string name="settings_notifications_daily_explication">The time of notification delivery might be inexact on certain brands of phones.\nNotifications can be turned off in system settings.</string>
	<string name="settings_oss_licenses">OSS Libraries</string>

	<!-- Notifications -->
	<string name="channel_name_timetable_changes">Timetable changes</string>
	<string name="channel_name_daily_notifications">Daily notifications</string>
	<string name="notification_event_added_title">New event in timetable!</string>
	<string name="notification_event_added_text">The following event was added to the timetable: %s @ %s</string>
	<string name="notification_event_removed_title">An event was cancelled</string>
	<string name="notification_event_removed_text">The following event was removed from the timetable: %s @ %s</string>
	<string name="notification_timetable_changes_title">Multiple changes were made to your timetable!</string>
	<string name="notification_timetable_changes_text">%d events were added, %d were cancelled.</string>
	<string name="notification_daily_title">Time to prepare for your day at uni!</string>
	<string name="notification_daily_text">Your first event today starts at %s @ %s - %s. You have %d events today.</string>
	<string name="notification_daily_day_before_text">Your first event tomorrow starts at %s @ %s - %s. You have %d events tomorrow.</string>
</resources>
