<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.patlejch.timetables.ui.setup.last.SetupLastViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSurface">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/last_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_title"
            android:textAppearance="@style/TextAppearance.Display"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/last_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/last_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_generic_half"
            android:text="@string/last_subtitle"
            android:textAppearance="@style/TextAppearance"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/last_title" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_generic"
            android:onClick="@{() -> viewModel.buttonClicked()}"
            android:text="@string/setup_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>